CLOUD-95440 Missing info for local development